# SlicerExtension-QASuite

./: README.md
QASuite/: CMakeLists.txt  QASuite.py
QASuite/CrossCorrCalculator/: CMakeLists.txt  CrossCorrCalculator.py  CrossCorrCalculator.py~
QASuite/EdgeDetect/: CMakeLists.txt  EdgeDetect.py
QASuite/ErodeImage/: CMakeLists.txt  ErodeImage.py  ErodeImage.py~
QASuite/GeometricDistortion/: CMakeLists.txt  GeometricDistortion.py  GeometricDistortion.py~
QASuite/LabelStatisticsExt/: CMakeLists.txt  LabelStatisticsExt.py  LabelStatisticsExt.py~
QASuite/MTF/: CMakeLists.txt  MTF.py  MTF.py~
QASuite/MTF/test/: 2 CRANIO 5-5-label.nrrd  2 SE T1-label.nrrd  2 SE T1.nrrd  2014-06-04-Scene-Catphan.mrml  2014-06-04-Scene-edge-ROI24x24-center_-32_53.mrml
QASuite/PhantomsLib/: CMakeLists.txt  __init__.py  phantom.py  philipsMR.py
QASuite/PhantomsLib/Logic/: vtkSlicerPhantomsLibLogic.cxx  vtkSlicerPhantomsLibLogic.h
QASuite/PhantomsLib/Resources/: qSlicerPhantomsLibModule.qrc
QASuite/PhantomsLib/Resources/UI/: qSlicerPhantomsLibFooBarWidget.ui  qSlicerPhantomsLibModuleWidget.ui
QASuite/PhantomsLib/Widgets/: qSlicerPhantomsLibFooBarWidget.cxx  qSlicerPhantomsLibFooBarWidget.h
QASuite/PhantomsLib/plugins/: CMakeLists.txt
QASuite/PhantomsLib/test/: 1301 Fantoccio PTSE_256_new.nrrd  2014-06-18-Scene.mrml  Philips-Phantom-profile.csv  Philips-Phantom-profile.mcsv  Volume.nrrd
QASuite/QCLib/: CMakeLists.txt  QCUtil.py  QCUtil.py~  __init__.py  genericPanel.py~
QASuite/QCLib/Logic/: CMakeLists.txt  vtkFillVOIImageFilter.cxx  vtkFillVOIImageFilter.h  vtkITKCoG.cxx  vtkITKCoG.h  vtkITKEdgeDetection.cxx  vtkITKEdgeDetection.h  vtkITKSignedDistanceTransform.cxx  vtkITKSignedDistanceTransform.h  vtkImageErodeExt.cxx  vtkImageErodeExt.h
QASuite/ROIStatistics/: CMakeLists.txt  ROIStatistics.py  ROIStatistics.py~
QASuite/SNR/: CMakeLists.txt  SNR.py  SNR.py~
QASuite/SliceThk/: CMakeLists.txt  SliceThk.py  SliceThk.py~
QASuite/SliceThk/test/: 1301 Fantoccio PTSE_256_new-label.nrrd  1301 Fantoccio PTSE_256_new-label_1.nrrd  1301 Fantoccio PTSE_256_new-label_2.nrrd  1301 Fantoccio PTSE_256_new.nrrd  2 SE T1-label.nrrd  2 SE T1-label_1.nrrd  2 SE T1-label_2.nrrd  2014-06-15-Scene-CT.mrml  2014-06-15-Scene-GE.mrml  2014-06-15-Scene-Philips.mrml  2014-06-15-Scene.mrml  6 5-5 STD lARGE BODY-label.nrrd  6 5-5 STD lARGE BODY-label_1.nrrd  901 Fantoccio PSE_512-label.nrrd  901 Fantoccio PSE_512-label_1.nrrd  901 Fantoccio PSE_512-label_2.nrrd
QASuite/VolumeStatistics/: CMakeLists.txt  VolumeStatistics.py
QASuite/makeROI/: CMakeLists.txt  makeROI.py  makeROI.py~
QASuite/makeROIGhost/: CMakeLists.txt  makeROIGhost.py  makeROIGhost.py~
